add confirmation form

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -126,6 +126,9 @@
             </div>
             <input class="btn-submit" type="submit" class="button" value="C'est parti" />
           </form>
+          <div id="confirmation-message" class="confirmation-message">
+            Merci ! Votre réservation a été confirmée.
+          </div>
         </div>
       </div>
     </div>
