final version, responsive fix

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -40,14 +40,14 @@
           aux réservations... Places limitées !
         </p>
         <button class="btn-signup modal-btn">
-          je m'inscris
+          Je m'inscris
         </button>
       </div>
       <div class="hero-img">
         <img src="./bg_img.jpg" alt="img" />
       </div>
       <button class="btn-signup modal-btn">
-        je m'inscris
+        Je m'inscris
       </button>
     </div>
 
@@ -127,7 +127,7 @@
             <input class="btn-submit" type="submit" class="button" value="C'est parti" />
           </form>
           <div id="confirmation-message" class="confirmation-message">
-            Merci ! Votre réservation a été confirmée.
+            Merci ! Votre formulaire a été envoyée.
           </div>
         </div>
       </div>
