patch form confirmation message

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -52,10 +52,10 @@
     </div>
 
     <div class="bground">
-      <div class="content">
+      <div class="content" id="modal-margin">
         <span class="close"></span>
         <div class="modal-body">
-          <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
+          <form name="reserve" action="index.html" method="get" id="modal-container" onsubmit="return validate(); ">
             <div class="formData">
               <label for="first">Prénom</label><br>
               <input class="text-control" type="text" id="first" name="first"/><span id="error-first" class="error-message"></span><br>
